// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field renders 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      Object {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "scale": 1,
              },
              Object {
                "translateY": 20,
              },
              Object {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            Array [
              Object {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        Object {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders counter 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          characterRestriction={10}
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontSize": 12,
            "lineHeight": 16,
            "marginLeft": 8,
            "paddingVertical": 2,
            "textAlign": "right",
          },
          undefined,
          {
            "color": "rgba(0, 0, 0, .38)",
          },
        ]
      }
    >
      4
       / 
      10
    </Text>
  </View>
</View>
`;

exports[`field renders default value 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          defaultValue="text"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .38)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders disabled value 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, .38)",
            "borderStyle": "dotted",
            "borderWidth": 1,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, .38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={false}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .38)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders error 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(213, 0, 0, 1)",
            "borderStyle": "solid",
            "borderWidth": 2,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 20,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(213, 0, 0, 1)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          error="message"
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    <Text
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "color": "rgb(213, 0, 0)",
          "flex": 1,
          "fontSize": 12,
          "lineHeight": 16,
          "opacity": 1,
          "paddingVertical": 2,
          "textAlign": "left",
        }
      }
    >
      message
    </Text>
  </View>
</View>
`;

exports[`field renders left accessory 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <Image />
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 20,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          renderLeftAccessory={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders multiline value 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          multiline={true}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 48,
                "transform": [
                  {
                    "translateY": 26,
                  },
                ],
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders prefix 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "paddingRight": 8,
              "top": 2,
            }
          }
        >
          <Text
            collapsable={false}
            style={
              {
                "color": "rgba(0, 0, 0, .38)",
                "fontSize": 16,
                "includeFontPadding": false,
                "textAlign": "left",
                "textAlignVertical": "top",
              }
            }
          >
            $
          </Text>
        </View>
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          prefix="$"
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders restriction 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgb(213, 0, 0)",
            "borderStyle": "solid",
            "borderWidth": 2,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgb(213, 0, 0)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          characterRestriction={2}
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontSize": 12,
            "lineHeight": 16,
            "marginLeft": 8,
            "paddingVertical": 2,
            "textAlign": "right",
          },
          undefined,
          {
            "color": "rgb(213, 0, 0)",
          },
        ]
      }
    >
      4
       / 
      2
    </Text>
  </View>
</View>
`;

exports[`field renders right accessory 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 20,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          renderRightAccessory={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <Image />
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders suffix 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          suffix=".com"
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
        <View
          collapsable={false}
          style={
            {
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "paddingLeft": 8,
              "top": 2,
            }
          }
        >
          <Text
            collapsable={false}
            style={
              {
                "color": "rgba(0, 0, 0, .38)",
                "fontSize": 16,
                "includeFontPadding": false,
                "textAlign": "right",
                "textAlignVertical": "top",
              }
            }
          >
            .com
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;

exports[`field renders title 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 20,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          title="field"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    <Text
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "color": "rgba(0, 0, 0, .38)",
          "flex": 1,
          "fontSize": 12,
          "lineHeight": 16,
          "opacity": 1,
          "paddingVertical": 2,
          "textAlign": "left",
        }
      }
    >
      field
    </Text>
  </View>
</View>
`;

exports[`field renders value 1`] = `
<View
  onResponderRelease={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="auto"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "height": 64,
        "paddingBottom": 8,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 16,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "borderColor": "rgba(0, 0, 0, 0.38)",
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": 0,
            "left": -3,
            "position": "absolute",
            "right": -3,
            "top": -3,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "left": "-100%",
            "paddingLeft": "50%",
            "position": "absolute",
            "top": 0,
            "transform": [
              {
                "scale": 0.75,
              },
              {
                "translateY": 0,
              },
              {
                "translateX": 0,
              },
            ],
            "width": "200%",
          }
        }
      >
        <Text
          collapsable={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontSize": 16,
              "includeFontPadding": false,
              "lineHeight": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          activeLineWidth={2}
          animationDuration={225}
          autoCapitalize="sentences"
          baseColor="rgba(0, 0, 0, .38)"
          disableFullscreenUI={true}
          disabledLineType="dotted"
          disabledLineWidth={1}
          editable={true}
          errorColor="rgb(213, 0, 0)"
          fontSize={16}
          label="test"
          labelFontSize={12}
          lineType="solid"
          lineWidth={0.5}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          selectionColor="rgb(0, 145, 234)"
          style={
            [
              {
                "flex": 1,
                "includeFontPadding": false,
                "margin": 0,
                "padding": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textAlignVertical": "top",
                "top": 2,
              },
              {
                "color": "rgba(0, 0, 0, .87)",
                "fontSize": 16,
                "height": 24,
              },
              undefined,
            ]
          }
          textColor="rgba(0, 0, 0, .87)"
          underlineColorAndroid="transparent"
          value="text"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        {
          "minHeight": 8,
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  />
</View>
`;
